--- a/assets/css/styleRelatorio.css
+++ b/assets/css/styleRelatorio.css
@@ -22,32 +22,6 @@ body{
     box-shadow: 5px 5px 10px  rgb(117, 4, 117);
 }
 
-.form {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: blueviolet ;
-    padding: 3rem;
-}
-
-.form-header {
-    margin-bottom: 3rem;
-    display: flex;
-    justify-content: space-between;
-}
-
-.form-header h1::after {
-    content: '';
-    display: block;
-    width: 5rem;
-    height: 0.3rem;
-    margin: 0 auto;
-    position: absolute;
-    border-radius: 10px;
-}
-
 .input-group{
     display: flex;
     flex-wrap: wrap;
@@ -61,7 +35,6 @@ body{
     margin-bottom: 0rem;
     size: 1rem;
 }
-
 .input-box input {
     margin: 0.6rem 0;
     padding: 0.8rem 1.2rem;
@@ -81,9 +54,7 @@ body{
     color: #000000c0;
 }
 
-
-
-.input-box button-rg {
+.input-box button{
     font-size: 30px;
     width: 100%;
     margin-top: 2.5rem;
@@ -96,6 +67,10 @@ body{
     cursor: pointer;
 }
 
-.button-rg:hover{
+.input-box button:hover{
     background-color:  #0000001c;
+}
+
+.print-group{
+    
 }
